@@ -4,13 +4,13 @@
 if config['cucumber']
   if recipes.include? 'rails 3.0'
     # for Rails 3.0, use only gem versions we know that work
-    gem 'cucumber-rails', '0.4.1', :group => :test
-    gem 'capybara', '0.4.1.2', :group => :test
+    gem 'cucumber-rails', '0.5.1', :group => :test
+    gem 'capybara', '1.0.0.beta1', :group => :test
     gem 'database_cleaner', '0.6.7', :group => :test
     gem 'launchy', '0.4.0', :group => :test
   else
     # for Rails 3.1+, use optimistic versioning for gems
-    gem 'cucumber-rails', '>= 0.5.0', :group => :test
+    gem 'cucumber-rails', '>= 0.5.1', :group => :test
     gem 'capybara', '>= 1.0.0.beta1', :group => :test
     gem 'database_cleaner', '>= 0.6.7', :group => :test
     gem 'launchy', '>= 0.4.0', :group => :test
